--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">没有你的天气</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
-    <string name="widgetset">小部件</string>
+    <string name="widgetset">小部件设置</string>
     <string name="widgetcolor">小部件字体颜色</string>
     <string name="othersetting">显示风格</string>
     <string name="alarm">预警：</string>
