--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,13 @@
     <string name="guide2">点击右侧，查看今日天气</string>
     <string name="guide3">点击可切换城市</string>
     <string name="guide4">长按可修改城市</string>
-    <string name = "clickEvent">点击事件</string>
+    <string name="clickEvent">点击事件</string>
+    <string name="time">时间</string>
+    <string name="date">日期</string>
+    <string name="weather">天气</string>
+    <string name="sysApp">系统应用</string>
+    <string name="show">显示</string>
+    <string name="hide">隐藏</string>
     <string name="tips_norain">未来7天，无雨</string>
     <string name="noword">隐约雷鸣 阴霾天空 但盼风雨来 能留你在此</string>
     <string name="change_city">切换城市</string>
