--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">没有你的天气</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
-    <string name="widgetset">小部件设置</string>
-    <string name="widgetcolor">小部件字体颜色</string>
+    <string name="widgetset">桌面组件设置</string>
+    <string name="widgetcolor">字体颜色</string>
     <string name="othersetting">显示风格</string>
     <string name="alarm">预警：</string>
     <string name="tab">\t\t\t\t</string>
@@ -31,4 +31,8 @@
     <string name="default_style">默认</string>
     <string name="classical_style">经典</string>
     <string name="show_nl">显示农历</string>
+    <string name="layout_setting">布局</string>
+    <string name="widget_text_color">字体颜色</string>
+
+
 </resources>
